; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_crypto_linux.c_aes_decrypt.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_crypto_linux.c_aes_decrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.linux_af_alg_skcipher = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @aes_decrypt(i8* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.linux_af_alg_skcipher*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.linux_af_alg_skcipher*
  store %struct.linux_af_alg_skcipher* %9, %struct.linux_af_alg_skcipher** %7, align 8
  %10 = load %struct.linux_af_alg_skcipher*, %struct.linux_af_alg_skcipher** %7, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = call i32 @linux_af_alg_skcipher_oper(%struct.linux_af_alg_skcipher* %10, i32 0, i32* %11, i32* %12)
  ret i32 %13
}

declare dso_local i32 @linux_af_alg_skcipher_oper(%struct.linux_af_alg_skcipher*, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
